# just-rest-client

./: .gitignore  .taurignore  ARCHITECTURE.md  LICENSE  README.md  SCRIPTING.md  TAURI.md  build.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.js
css/: main.css
js/: app.js  request.js  scripting.js  storage.js  variable.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html
web/css/: main.css
web/js/: app.js  request.js  scripting.js  storage.js  variable.js
